apps/garage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  labels:
    app: garage
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  selector:
    app: garage
  ports:
    - name: s3
      port: 3900
      targetPort: s3
      protocol: TCP
    - name: rpc
      port: 3901
      targetPort: rpc
      protocol: TCP
    - name: web
      port: 3902
      targetPort: web
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: admin
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: garage-headless
  labels:
    app: garage
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: garage
  ports:
    - name: s3
      port: 3900
      targetPort: s3
      protocol: TCP
    - name: rpc
      port: 3901
      targetPort: rpc
      protocol: TCP
    - name: web
      port: 3902
      targetPort: web
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: admin
      protocol: TCP
