apps/garage/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: garage-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: garage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: guardrail
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - guardrail-api
                  - guardrail-curator
                  - guardrail-ingestion
                  - guardrail-processor
                  - guardrail-web
      ports:
        - protocol: TCP
          port: 3900
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: guardrail
          podSelector:
            matchLabels:
              app: guardrail-setup-garage
      ports:
        - protocol: TCP
          port: 3903
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - protocol: TCP
          port: 3903
